{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GamePlay",
            "id": "872c5c00-6a45-44ae-a8ab-f241b19c0120",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "903ed790-6862-49a7-8113-78bf3b9a0b63",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DebugLog",
                    "type": "Button",
                    "id": "25ef7d45-1dcd-4b31-b886-a01bb822d1f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "New movement",
                    "type": "Value",
                    "id": "1742b24d-3e49-4b97-8288-e69efc9abb4d",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5ac35718-e5b5-493a-aec5-6446f66e2335",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae0c75ec-1e2b-42e1-adca-4b7d7965a788",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "DebugLog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64ae48cc-4fff-49f1-8076-7c5f1ec1516c",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "New movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}